2003-09-24  Darin Adler  <darin@apple.com>

        * layout-tests/fast/table/003-expected.txt: Updated for textarea width change.

2003-09-24  David Hyatt  <hyatt@apple.com>

	Fix for 3429646, <img src="blah"<img src="foo"> should show up as two images.
	
        Reviewed by darin

        * khtml/html/htmlparser.cpp:
        (KHTMLParser::handleResidualStyleCloseTagAcrossBlocks):
        * khtml/html/htmltokenizer.cpp:
        (HTMLTokenizer::parseTag):

2003-09-24  Darin Adler  <darin@apple.com>

        Reviewed by Dave.

        - fixed a recent regression, and ...
        - fixed 3386544 -- ARCH: <object>s don't support transclusion like <iframe>s do

        * khtml/khtml_part.cpp: (KHTMLPart::childFrame): Added back a cast I should
        not have removed to fix the function.

2003-09-24  David Hyatt  <hyatt@apple.com>

	Fix for 3430612, crash on about:blank in updateHoverActiveState.  Just missing
	a null-check.  Also remove a hover optimization that was bogus.
	
        Reviewed by darin

        * khtml/rendering/render_layer.cpp:
        (RenderLayer::updateHoverActiveState):

2003-09-24  Richard Williamson   <rjw@apple.com>

	Fixed 3420736.  Clear renderer caches when get an ATS font changed notification.  This fix may be moot depending on progress toward fixing 2695906.

        * kwq/WebCoreBridge.h:
        * kwq/WebCoreBridge.mm:
        (+[WebCoreBridge updateAllViews]):

2003-09-24  Darin Adler  <darin@apple.com>

        - a new test for JavaScript date parsing

        * layout-tests/fast/js/date-parse-test-expected.txt: Added.
        * layout-tests/fast/js/date-parse-test.html: Added.

2003-09-24  Darin Adler  <darin@apple.com>

        Reviewed by Ken.

        - fixed ownerElement for documents in HTML objects (helpful for some work Dave is doing)

        * khtml/khtml_part.h: Change name of frame function to childFrame for clarity.
        * khtml/khtml_part.cpp: