@@ -1,0 +1,180 @@
+layer at (0,0) size 800x600
+  RenderCanvas at (0,0) size 800x600
+layer at (0,0) size 800x587
+  RenderBlock {HTML} at (0,0) size 800x587
+    RenderBody {BODY} at (8,8) size 784x571
+      RenderBlock {H1} at (0,0) size 784x33
+        RenderText {TEXT} at (0,0) size 436x33
+          text run at (0,0) width 436: "Form Element Geometry Tests"
+      RenderBlock {P} at (0,51) size 784x17
+        RenderText {TEXT} at (0,0) size 586x17
+          text run at (0,0) width 586: "These tests help us tune the widget classes in KWQ to have all the right fudge factors."
+      RenderBlock {H2} at (0,85) size 784x24
+        RenderText {TEXT} at (0,0) size 174x24
+          text run at (0,0) width 174: "Bounding Boxes"
+      RenderTable {TABLE} at (0,126) size 172x28
+        RenderTableSection {TBODY} at (0,0) size 0x28
+          RenderTableRow {TR} at (0,0) size 0x0
+            RenderTableCell {TD} at (2,2) size 58x24 [r=0 c=0 rs=1 cs=1]
+              RenderBlock {DIV} at (1,1) size 56x22
+                RenderInline {FONT} at (0,0) size 52x18
+                  RenderSubmitButton {INPUT} at (2,2) size 52x18
+            RenderTableCell {TD} at (62,2) size 68x24 [r=0 c=1 rs=1 cs=1]
+              RenderBlock {DIV} at (1,1) size 66x22
+                RenderInline {FONT} at (0,0) size 62x18
+                  RenderSelect {SELECT} at (2,2) size 62x18
+              RenderBlock (anonymous) at (1,23) size 66x0
+                RenderInline {FONT} at (0,0) size 0x0
+            RenderTableCell {TD} at (132,4) size 18x19 [r=0 c=2 rs=1 cs=1]
+              RenderBlock {DIV} at (1,1) size 16x17
+                RenderInline {FONT} at (0,0) size 12x13
+                  RenderRadioButton {INPUT} at (2,2) size 12x13
+              RenderBlock (anonymous) at (1,18) size 16x0
+                RenderInline {FONT} at (0,0) size 0x0
+            RenderTableCell {TD} at (152,5) size 18x18 [r=0 c=3 rs=1 cs=1]
+              RenderBlock {DIV} at (1,1) size 16x16
+                RenderInline {FONT} at (0,0) size 12x12
+                  RenderCheckBox {INPUT} at (2,2) size 12x12
+              RenderBlock (anonymous) at (1,17) size 16x0
+                RenderInline {FONT} at (0,0) size 0x0
+      RenderTable {TABLE} at (0,154) size 172x28
+        RenderTableSection {TBODY} at (0,0) size 0x28
+          RenderTableRow {TR} at (0,0) size 0x0
+            RenderTableCell {TD} at (2,2) size 58x24 [r=0 c=0 rs=1 cs=1]
+              RenderBlock {DIV} at (1,1) size 56x22
+                RenderSubmitButton {INPUT} at (2,2) size 52x18
+            RenderTableCell {TD} at (62,2) size 68x24 [r=0 c=1 rs=1 cs=1]
+              RenderBlock {DIV} at (1,1) size 66x22
+                RenderSelect {SELECT} at (2,2) size 62x18
+            RenderTableCell {TD} at (132,4) size 18x19 [r=0 c=2 rs=1 cs=1]
+              RenderBlock {DIV} at (1,1) size 16x17
+                RenderRadioButton {INPUT} at (2,2) size 12x13
+            RenderTableCell {TD} at (152,5) size 18x18 [r=0 c=3 rs=1 cs=1]
+              RenderBlock {DIV} at (1,1) size 16x16
+                RenderCheckBox {INPUT} at (2,2) size 12x12
+      RenderTable {TABLE} at (0,182) size 172x28
+        RenderTableSection {TBODY} at (0,0) size 0x28
+          RenderTableRow {TR} at (0,0) size 0x0
+            RenderTableCell {TD} at (2,2) size 58x24 [r=0 c=0 rs=1 cs=1]
+              RenderBlock {DIV} at (1,1) size 56x22
+                RenderInline {FONT} at (0,0) size 52x12
+                  RenderSubmitButton {INPUT} at (2,2) size 52x18
+            RenderTableCell {TD} at (62,2) size 68x24 [r=0 c=1 rs=1 cs=1]
+              RenderBlock {DIV} at (1,1) size 66x22
+                RenderInline {FONT} at (0,0) size 62x12
+                  RenderSelect {SELECT} at (2,2) size 62x18
+            RenderTableCell {TD} at (132,4) size 18x19 [r=0 c=2 rs=1 cs=1]
+              RenderBlock {DIV} at (1,1) size 16x17
+                RenderInline {FONT} at (0,0) size 12x12
+                  RenderRadioButton {INPUT} at (2,2) size 12x13
+            RenderTableCell {TD} at (152,5) size 18x18 [r=0 c=3 rs=1 cs=1]
+              RenderBlock {DIV} at (1,1) size 16x16
+                RenderInline {FONT} at (0,0) size 12x12
+                  RenderCheckBox {INPUT} at (2,2) size 12x12
+      RenderTable {TABLE} at (0,210) size 555x68
+        RenderTableSection {TBODY} at (0,0) size 0x68
+          RenderTableRow {TR} at (0,0) size 0x0
+            RenderTableCell {TD} at (2,2) size 84x25 [r=0 c=0 rs=1 cs=1]
+              RenderBlock {DIV} at (1,1) size 82x23
+                RenderLineEdit {INPUT} at (2,2) size 78x19
+            RenderTableCell {TD} at (88,2) size 44x64 [r=0 c=1 rs=1 cs=1]
+              RenderBlock {DIV} at (1,1) size 42x62
+                RenderSelect {SELECT} at (2,2) size 38x58
+            RenderTableCell {TD} at (134,2) size 240x24 [r=0 c=2 rs=1 cs=1]
+              RenderBlock {DIV} at (1,1) size 238x22
+                RenderFileButton {INPUT} at (2,2) size 234x18
+            RenderTableCell {TD} at (376,2) size 177x38 [r=0 c=3 rs=1 cs=1]
+              RenderBlock {DIV} at (1,1) size 175x36
+                RenderTextArea {TEXTAREA} at (4,4) size 167x28
+      RenderBlock {H2} at (0,295) size 784x24
+        RenderText {TEXT} at (0,0) size 209x24
+          text run at (0,0) width 209: "Baseline Alignment"
+      RenderBlock {DIV} at (0,336) size 784x26
+        RenderInline {FONT} at (0,0) size 221x23
+          RenderText {TEXT} at (0,0) size 45x23
+            text run at (0,0) width 45: "text "
+          RenderSubmitButton {INPUT} at (47,6) size 52x18
+          RenderText {TEXT} at (101,0) size 6x23
+            text run at (101,0) width 6: " "
+          RenderSelect {SELECT} at (109,6) size 62x18
+          RenderText {TEXT} at (173,0) size 6x23
+            text run at (173,0) width 6: " "
+          RenderRadioButton {INPUT} at (182,8) size 12x13
+          RenderText {TEXT} at (197,0) size 6x23
+            text run at (197,0) width 6: " "
+          RenderCheckBox {INPUT} at (206,9) size 12x12
+          RenderText {TEXT} at (0,0) size 0x0
+      RenderBlock {DIV} at (0,362) size 784x22
+        RenderText {TEXT} at (0,1) size 31x17
+          text run at (0,1) width 31: "text "
+        RenderSubmitButton {INPUT} at (33,2) size 52x18
+        RenderText {TEXT} at (87,1) size 4x17
+          text run at (87,1) width 4: " "
+        RenderSelect {SELECT} at (93,2) size 62x18
+        RenderText {TEXT} at (157,1) size 4x17
+          text run at (157,1) width 4: " "
+        RenderRadioButton {INPUT} at (164,4) size 12x13
+        RenderText {TEXT} at (179,1) size 4x17
+          text run at (179,1) width 4: " "
+        RenderCheckBox {INPUT} at (186,5) size 12x12
+        RenderText {TEXT} at (0,0) size 0x0
+      RenderBlock {DIV} at (0,384) size 784x22
+        RenderInline {FONT} at (0,0) size 190x12
+          RenderText {TEXT} at (0,5) size 23x12
+            text run at (0,5) width 23: "text "
+          RenderSubmitButton {INPUT} at (25,2) size 52x18
+          RenderText {TEXT} at (79,5) size 3x12
+            text run at (79,5) width 3: " "
+          RenderSelect {SELECT} at (84,2) size 62x18
+          RenderText {TEXT} at (148,5) size 3x12
+            text run at (148,5) width 3: " "
+          RenderRadioButton {INPUT} at (154,4) size 12x13
+          RenderText {TEXT} at (169,5) size 3x12
+            text run at (169,5) width 3: " "
+          RenderCheckBox {INPUT} at (175,5) size 12x12
+          RenderText {TEXT} at (0,0) size 0x0
+      RenderBlock {DIV} at (0,406) size 784x37
+        RenderText {TEXT} at (0,16) size 31x17
+          text run at (0,16) width 31: "text "
+        RenderLineEdit {INPUT} at (33,16) size 78x19
+        RenderText {TEXT} at (113,16) size 4x17
+          text run at (113,16) width 4: " "
+        RenderFileButton {INPUT} at (117,17) size 234x18
+        RenderText {TEXT} at (351,16) size 4x17
+          text run at (351,16) width 4: " "
+        RenderTextArea {TEXTAREA} at (357,2) size 167x28
+        RenderText {TEXT} at (0,0) size 0x0
+      RenderBlock {H2} at (0,460) size 784x24
+        RenderText {TEXT} at (0,0) size 211x24
+          text run at (0,0) width 211: "Pop-up Menu Sizes"
+      RenderBlock {DIV} at (0,501) size 784x26
+        RenderInline {FONT} at (0,0) size 181x23
+          RenderText {TEXT} at (0,0) size 0x0
+          RenderSelect {SELECT} at (2,6) size 36x18
+          RenderText {TEXT} at (40,0) size 6x23
+            text run at (40,0) width 6: " "
+          RenderSelect {SELECT} at (48,6) size 36x18
+          RenderText {TEXT} at (86,0) size 6x23
+            text run at (86,0) width 6: " "
+          RenderSelect {SELECT} at (94,6) size 85x18
+          RenderText {TEXT} at (0,0) size 0x0
+      RenderBlock {DIV} at (0,527) size 784x22
+        RenderSelect {SELECT} at (2,2) size 36x18
+        RenderText {TEXT} at (40,1) size 4x17
+          text run at (40,1) width 4: " "
+        RenderSelect {SELECT} at (46,2) size 36x18
+        RenderText {TEXT} at (84,1) size 4x17
+          text run at (84,1) width 4: " "
+        RenderSelect {SELECT} at (90,2) size 85x18
+        RenderText {TEXT} at (0,0) size 0x0
+      RenderBlock {DIV} at (0,549) size 784x22
+        RenderInline {FONT} at (0,0) size 175x12
+          RenderText {TEXT} at (0,0) size 0x0
+          RenderSelect {SELECT} at (2,2) size 36x18
+          RenderText {TEXT} at (40,5) size 3x12
+            text run at (40,5) width 3: " "
+          RenderSelect {SELECT} at (45,2) size 36x18
+          RenderText {TEXT} at (83,5) size 3x12
+            text run at (83,5) width 3: " "
+          RenderSelect {SELECT} at (88,2) size 85x18
+          RenderText {TEXT} at (0,0) size 0x0
